# sreality-crawler

./: .gitignore  README.md  database.py  docker-compose.yaml  init.sql  pyproject.toml  requirements.txt
conf/: config.yaml
conf/crawler/: sreality.yaml
conf/db/: postgresql.yaml
crawler/: crawler.py  spider.py
database/: create.sql  database.py
dockerfiles/: crawler.dockerfile  db.dockerfile  server.dockerfile
server/: server.py
src/crawler/: crawler.py  spider.py
src/database/: database.py
src/server/: server.py  sources.py
